
Package org.springframework.osgi.test
* improved installed bundles resolving when PackageAdmin service is available

Package org.springframework.osgi.util
* BundleDelegatingClassLoader constructor visibility changed from private to protected
* fixed sporadic exception occuring in DebugUtils when analyzing class loading errors

Package org.springframework.osgi.web
* added OsgiWarDeploymentException to the deployment interfaces
* added WarDeployment for bundles deployed by the WarDeployer
* added WarDeploymentContext for accessing the properties associated with a war deployment and the associated
  BundleContext as a ServletContext attribute
* improved cleanup in case of exceptions for both TomcatWarDeployer and JettyWarDeployer
* added OsgiBundleXmlWebApplicationContext as an OSGi aware XML application context
* refined TomcatDeployer to rely only on Service interface rather the EmbeddedServer class
* fixed casting problem occurring during war undeployment
* improved weaving process for imported web container services
* refined DefaultContextPathStrategy to support folders and encode unsafe characters
* OsgiBundleXmlWebApplicationContext provides the servlet namespace under 'org.springframework.context.web.namespace'
  property of its OSGi service
* TomcatWarDeployer Service object can be set directly by the user
* JettyWarDeployer Server object can be set directly by the user

Package org.springframework.osgi.web.extender
* changed package of the internal, private bundle activator


Changes in version 1.1.0 M1 (2008-04-07)
-----------------------------------------

General
* Knopflerfish 2.0.4+ required
* Felix 1.0.3+ required
* introduced new module dedicated to web application running on OSGi platforms
  (successfully tested on Equinox 3.2.2 and the upcoming Felix 1.0.4)

Package org.springframework.osgi.context
* AbstractDelegatedExecutionApplicationContext calls "cancelRefresh" if exceptions appear during the delegeted refresh